dataset1235/2025-2/2318198438/users/1018361269/executions/2601575092_2650572580.log
== RUN (2025-08-22 15:02:40)
-- CODE: 
print("*****")
print("(* ° ° *)")
print( ''* ^ *   ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( ''* ^ *   ")
                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( ''* ^ *   ")
                     ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:59:35)
-- CODE: 
print("*****")
print("(* °  ° *) ")
print(" ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
(* °  ° *)
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
(* °  ° *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:03:53)
-- CODE: 
print("*****")
print("(* ° ° *)")
 print( "*  ^  *")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( "*  ^  *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( "*  ^  *")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:02:17)
-- CODE: 
print("*****")
print("(* ° ° *)")
print(" * ^ *   ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 * ^ *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 * ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:02:52)
-- CODE: 
print("*****")
print("(* ° ° *)")
print( ''* ^ *   ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( ''* ^ *   ")
                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( ''* ^ *   ")
                     ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:06:53)
-- CODE: 
print("*****")
print("(* ° ° *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:02:57)
-- CODE: 
print("*****")
print("(* ° ° *)")
print( '* ^ *   ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( '* ^ *   ")
           ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( '* ^ *   ")
           ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:02:41)
-- CODE: 
print("*****")
print("(* ° ° *)")
print( ''* ^ *   ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( ''* ^ *   ")
                     ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print( ''* ^ *   ")
                     ^
SyntaxError: unterminated string literal (detected at line 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:03:38)
-- CODE: 
print("*****")
print("(* ° ° *)")
print( "*  ^  ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*  ^
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*  ^
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:03:47)
-- CODE: 
print("*****")
print("(* ° ° *)")
print( "*  ^  *")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*  ^  *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*  ^  *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:59:51)
-- CODE: 
print("*****")
print("(* ° ° *)")
print(" ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
(* ° ° *)
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
(* ° ° *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:00:33)
-- CODE: 
print("*****")
print("(* ° ° *)")
print("* ^ *   ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
* ^ *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:08:38)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:59:23)
-- CODE: 
print("*****")
print(/"(* °  ° *) ")
print(" ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(/"(* °  ° *) ")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(/"(* °  ° *) ")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:04:40)
-- CODE: 
print("*****")
print("(* ° ° *)")
print(' ' *  ^  *'')
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print(' ' *  ^  *'')
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print(' ' *  ^  *'')
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 15:07:17)
-- CODE: 
print("*****")
print("(* ° ° *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:06:05)
-- CODE: 
print("*****")
print("(* ° ° *)")
print(" *  ^  *")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *  ^  *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *  ^  *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:05:36)
-- CODE: 
print("*****")
print("(* ° ° *)")
print("  * ^  *")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  * ^  *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  * ^  *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 14:58:29)
-- CODE: 
print("*****")
print(" ")
print(" ")
print(" ")
print(" ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 15:08:45)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
